<resources>
<string name="app_name">Predictoe</string>

        <string name="resting">Predictoe wants you to train</string>
        <string name="load">Upload</string>
        <string-array name="restingBrush">
            <item>it.</item>
            <item>him.</item>
            <item>her.</item>
            <item>it for</item>
            <item>the other</item>
            <item>another way</item>
            <item>for a</item>
            <item>it is</item>
            <item>which does</item>
            <item>in which</item>
            <item>without the</item>
            <item>based on</item>
        </string-array>
        <string name="restingStory">\t \t \t You must load a text file. Please remember the file must end with a .txt extension. The encoding must be UTF-8. Use Notepad++ on Windows to save a file in the correct encoding. Predictoe is a way to generate hilarious stories from a base text. The text must be applied in order to begin writing your story. </string>
        <string name="carriage">Para</string>
        <string name="exclamation">!</string>
        <string name="comma">?</string>

        <string name="quote">,</string>
        <string name="per">.</string>
        <string name="bs">BS</string>
        <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="corpus">corpus.txt</string>
    <string name="clearcorpus">Clear corpus</string>


</resources>

