<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_load"
        android:icon="@android:drawable/ic_menu_upload"
        android:onClick="load"
        android:title="@string/load"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />


    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:onClick="share"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_clear"
        android:onClick="clear"
        android:title="@string/clear"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_clearcorpus"
        android:onClick="clearContents"
        android:title="@string/clearcorpus"
        tools:ignore="AppCompatResource" />


</menu>